[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "xcli"
version = "0.1.0"
description = "X (Twitter) 非公式 GraphQL API を叩く自己利用 CLI"
readme = "README.md"
license = "MIT"
authors = [{ name = "k41-vibe" }]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.11",
    "XClientTransaction>=1.0.3",
    "Pillow>=10.0",       # 画像処理(インライン表示/メディア)
    "textual>=1.0",       # ターミナルUI(xcli tui)
    "rich-pixels>=3.0",   # TUI内の画像プレビュー
]

[project.scripts]
xcli = "xcli.cli:main"

[tool.setuptools]
packages = ["xcli"]
